style: separated css into multiple files

--- a/about-me.html
+++ b/about-me.html
@@ -8,12 +8,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
     <div class="grid-container">
       <div class="header box">
-        <header>
+        <header class="name-title">
           <h1>Diana Duran</h1>
           <h2>
             <span class="color">Software Engineer</span> | Life Long Learner |
@@ -23,7 +23,7 @@
       </div>
       <div class="sidebar box">
         <aside>
-          <nav>
+          <nav class="nav">
             <a href="/index.html" rel="index target="_self">Home</a>
             <a href="/contact.html" rel="noopener" target="_blank"
               >Contact Me</a
