--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
@@ -17,7 +17,7 @@
   <body>
     <div class="grid-container">
       <div class="header box">
-        <header>
+        <header class="name-title">
           <h1>Diana Duran</h1>
           <h2>
             <span class="color">Software Engineer</span> | Life Long Learner |
@@ -27,7 +27,7 @@
       </div>
       <div class="sidebar box">
         <aside>
-          <nav>
+          <nav class="nav">
             <a href="/about-me.html" rel="author" target="_self">About Me</a>
             <a href="/contact.html" rel="noopener" target="_blank"
               >Contact Me</a
