--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <link rel="stylesheet" type="text/css" href="article.css" />
+    <link rel="stylesheet" type="text/css" href="/css/article.css" />
   </head>
   <body>
     <article>
