feat: sample blog post added

--- a/grace-grocer.html
+++ b/grace-grocer.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>About Me</title>
-    <meta name="description" content="short biography" />
+    <title>Grace Grocer</title>
+    <meta name="description" content="blog for Grace Shopper project" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
@@ -11,16 +11,10 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
-    <div class="grid-container">
-      <div class="header box">
-        <header class="name-title">
-          <h1>Diana Duran</h1>
-          <h2>
-            <span class="color">Software Engineer</span> | Life Long Learner |
-            Passionate Problem Solver
-          </h2>
+    <div>
+        <header>
+          <h1>Grace Grocer</h1>
         </header>
-      </div>
       <div class="sidebar box">
         <aside>
           <nav class="nav">
@@ -33,7 +27,11 @@
       </div>
       <div class="content box">
         <article>
-          <h1>Bio</h1>
+          <a
+              href="https://grace-grocer.herokuapp.com/"
+              rel="noopener"
+              target="_blank"
+            ><h1>Making Grace Grocer</h1></a>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quisquam earum impedit, vero minima commodi facilis, dicta deleniti tempora quae laborum animi veniam enim beatae maxime deserunt architecto? Rem consequuntur ducimus perferendis assumenda. Laudantium nam eum vitae perferendis necessitatibus cum magnam enim itaque quas nesciunt iure natus, autem a rem provident fugit at asperiores consectetur nostrum expedita doloremque. Iusto enim pariatur sequi ex deserunt exercitationem quod magni voluptas rerum at nam, facilis reiciendis assumenda eveniet doloremque quibusdam cum! Alias ab maxime incidunt voluptate corrupti recusandae vero corporis error, blanditiis facere. Explicabo, totam perspiciatis delectus illo tempora, assumenda modi quod voluptate minima earum, libero ullam optio enim accusantium! In quaerat voluptatum incidunt, quas est id itaque ratione unde voluptatem illo illum quae labore perferendis corporis, consequuntur, sed dicta eos magnam vero dolorum. Magni sit nobis a voluptates delectus, sunt vel voluptate dolorem deleniti veritatis, accusantium suscipit, inventore eius perspiciatis tempore quas eligendi? Porro suscipit voluptatum, voluptatibus quae iusto vitae aut. Maxime numquam magnam nobis ducimus aspernatur in saepe nulla eius. Provident aliquid, rem voluptatibus autem similique eligendi temporibus. Quaerat quasi expedita sapiente repudiandae itaque aspernatur eaque nobis unde error, adipisci, eos quis fugit, tempora architecto laborum vel quidem. Sequi, officia mollitia.</p>
         </article>
       </div>
