--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&family=Lato:ital,wght@0,100;0,300;0,400;1,100&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap"
     />
   </head>
   <body>
@@ -39,7 +39,9 @@
         <main>
           <h1>Projects</h1>
           <div class="project-gallery-container">
-            <div class="card" id="one">Card 1</div>
+            <a href="./grace-grocer.html" target="_self">
+              <div class="card" id="one"></div>
+            </a>
             <div class="card" id="two">Card 2</div>
             <div class="card" id="three">Card 3</div>
             <div class="card" id="four">Card 4</div>
